--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,7 +1,7 @@
 @import "fonts";
 @import "animations";
 $main-font: 'Heebo', sans-serif;
-$second-font: 'RoadRadio', sans-serif;
+$second-font: 'Plus Jakarta Sans', sans-serif;
 $size: 14px;
 $dark: #09244F;
 $blue: #47A2FF;
@@ -24,7 +24,6 @@ body, html {
   //scroll-behavior: smooth;
   //&.no-scroll {
   //  overflow: hidden;
-  //}
 
 }
 
